# ssj-2023

./: Cargo.toml  Justfile  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: app.rs  lib.rs  main.rs
src/systems/: mod.rs  scene.rs
src/systems/game/: camera.rs  collision.rs  consumer.rs  mod.rs  product.rs  screen.rs  shop.rs  spawner.rs  state.rs  ui.rs
static/: opening_text.toml
web/: index.html
