[package]
name = "ssj-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.10"
bevy_rapier3d = { version = "0.21", features = ["debug-render-3d", "wasm-bindgen", "serde-serialize"] }
cfg-if = "1.0"
rand = "0.8"
smooth-bevy-cameras = "0.8"
derive_builder = "0.12"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3